For smartphones it's needed that the body has a min-width: 480px

--- a/alex11-V.2/responsive.css
+++ b/alex11-V.2/responsive.css
@@ -27,6 +27,7 @@ Hello, this is the BuddyPress Responsive theme stylesheet
 	body {
 		margin-top: -28px !important;
 		background: #fff;
+		min-width:480px;
 	}
 	#wpadminbar {
 		display: none;
