--- a/alex11-V.2/responsive.css
+++ b/alex11-V.2/responsive.css
@@ -366,6 +366,9 @@ Hello, this is the BuddyPress Responsive theme stylesheet
 3.0 - iPhone
 --------------------------------------------------------------*/
 @media only screen and (max-width: 320px) {
+	body {
+		width:480px;
+	}
 	ul#nav li {
 		float: none;
 		width: 100%;
