--- a/alex11-V.2/style.css
+++ b/alex11-V.2/style.css
@@ -286,6 +286,12 @@ body.activity.directory #content .padder form#whats-new-form h5 {
 }
 /* Content
 --------------------------------------------- */
+.entry p {
+	font-size:11pt;
+	line-height:150%;
+	color:#373737;
+	letter-spacing:0.01em;
+}
 div#content .padder {
     border-bottom-left-radius: 0;
     border-right: 0;
@@ -1275,4 +1281,3 @@ h2.pagetitle .category { font-weight:normal; font-size:11px; }
 	margin-right:10px;
 	float:left;
 }
-@import url("responsive.css");
